--- a/gantt/index.html
+++ b/gantt/index.html
@@ -8,7 +8,8 @@
 	<script type="text/javascript" src="d3.v4.min.js"></script>
 
 	<script type="text/javascript" src="d3-tip.min.js"></script>
-	<script type="text/javascript" src="mapperGantt.js"></script>
+	<!-- <script type="text/javascript" src="mapperGantt.js"></script> -->
+	<script type="text/javascript" src="ganttOut.js"></script>
 	<script type="text/javascript" src="gantt.js"></script>
 	<script type="text/javascript" src="palette.js"></script>
 
